	* net/getsockname.c: Added standard getsockname() to return the local
	  address associated with a socket.
	* lib/stdio/lib_asprintf.c: Add asprintf()
	* configs/olimex-lpc1766stk/ftpc:  Add a configuration to support
	  testing of the FTP client shell.
	* fd/fs_fdopen.c and net/net_checksd.c: Add support so that fdopen may
	  be used with socket descriptors.
	* net/recvfrom.c: Fix an error found in receiving small files via FTP:
	  The small file is received a buffered in the readahead buffer, then the
	  socket is disconnected.  When the app calls recvfrom, the socket is
	  already disconnected and the buffered data is stranded.  Now, recvfrom
	  will continue to return success after the socket is disconnected until
	  the readahead buffer is drained.
	* olimex-lp1766stk/ftpc/defconfig: Many configurations have the MTU 
	  (CONFIG_NET_BUFSIZE) set to very small numbers, less then the minimum
	  MTU size that must be supported -- 576. This can cause problems in
	  some networks:  CONFIG_NET_BUFSIZE should be set to at least 576 in
	  all defconfig files.  This has only been fixed in this defconfig file.

6.5 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/avr/src/avr and arch/avr/include/avr: Adds general support for
	  the Atmel 8-bit AVR family.
	* arch/avr/src/atmega and arch/avr/include/atmega: Addes support for the
	  Atmel AVR ATMega family.
	* arch/avr/src/at90usb and arch/avr/include/at90usb: Addes support for the
	  Atmel AVR AT90USB family.
	* configs/micropendous3: Adds a board configuration for the Opendous
	  Micropendous 3 board.  This board may be populated with several different
	  members of the Atmel AVR AT90USB family.
	* configs/amber: This is a placehold for the Atmel ATMega128 Amber Web
	  Server from SoC Robotics.  Not much present in this directory on initial
	  check-in.
	* configs/teensy: Adds a board configuration for the PJRC Teensy++ 2.0 boar
	  that features an Atmel AT90USB1286 MCU.
